slurm-4548839.out
Traceback (most recent call last):
  File "/project/p_gnn001/code/tsp/tsp/train2.py", line 21, in <module>
    from gnngls import models, datasets, algorithms
  File "/project/p_gnn001/code/tsp/tsp/gnngls/models.py", line 258
    for rel in rel_names}, aggregate='min')
    ^^^
SyntaxError: invalid syntax
